# LA

./: LOSS_CURVE_FIX.md  PRETRAIN_TRACKING_README.md  example_pretrain_with_tracking.py  plot_tokens_closs.py  requirements.txt  test_flop_counter.py
accessory/: engine_pretrain.py  main_pretrain.py
accessory/model/LLM/: internlm.py
accessory/tools/: generate_packed_data.py  generate_packed_data_improved.py
accessory/util/: flop_counter.py
internlm2_scaling/configs/: internlm2-chat-126M-h4-L8.json  internlm2-chat-1386M-h16-L16.json  internlm2-chat-189M-h4-L24.json  internlm2-chat-355M-h6-L24.json  internlm2-chat-567M-h12-L8.json  internlm2-chat-992M-h12-L20.json  variants_summary.csv
internlm2_scaling/scripts/: generate_variants.py
rust_tokenizer/: COMPILE_GUIDE.md  Cargo.toml  INSTALL.md  README.md  build.sh  conda_environment.yml  example.py  install.sh  integration_example.py  pyproject.toml
rust_tokenizer/benchmarks/: benchmark.py
rust_tokenizer/python/rust_tokenizer/: __init__.py
rust_tokenizer/src/: lib.rs  tokenizer.rs  utils.rs
rust_tokenizer/tests/: test_tokenizer.py
