[package]
name = "rust_tokenizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
pyo3 = { version = "0.22", features = ["extension-module"] }
tokenizers = { version = "0.21.4", features = ["default"] }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"

[lib]
crate-type = ["cdylib"]
