[package]
name = "rust_tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_tokenizer"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 核心依赖
tokenizers = { version = "0.19", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Python 绑定
pyo3 = { version = "0.22", features = ["extension-module"] }

# 可选：用于并行处理
rayon = "1.10"

# 用于日志
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
opt-level = 3